[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmtest"
version = "0.1.0"
description = "Radon measurement test package"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
